# github-project-starter

./: README.md  run.bat  setup.py
scripts/: starter.bat  starter.sh
starter/: __init__.py  __main__.py  cli.py  creator.py  templates.py  utils.py
templates/cpp/: CMakeLists.txt  README.md
templates/cpp/src/: main.cpp
templates/java/: README.md  pom.xml
templates/java/src/main/java/com/example/: Main.java
templates/javascript/: README.md  index.js  package.json
templates/python/: main.py  requirements.txt
test_project/: README.md
